# distman

./: .gitignore  LICENSE  Makefile  README.md  dist.json  distman.env  example_stack.env  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
lib/distman/: __init__.py  cache.py  cli.py  clone.py  config.py  dist.py  logger.py  pipeline.py  source.py  sync.py  transform.py  util.py
tests/: test_cache.py  test_dist.py  test_pipeline.py  test_transform.py  test_util.py
