[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distman"
version = "0.8.2"
description = "Simple software distribution for complex pipelines"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Ryan Galloway", email = "ryan@rsgalloway.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "GitPython>=3.1,<4.0",
  "htmlmin>=0.1,<1.0",
  "jsmin>=3.0,<4.0",
  "tqdm>=4.67,<5.0",
  "dataclasses; python_version<'3.7'",
]

[project.urls]
Homepage = "http://github.com/rsgalloway/distman"
Source = "http://github.com/rsgalloway/distman"

[project.scripts]
distman = "distman.cli:main"
dist = "distman.dist:main"
distcache = "distman.cache:main"

[tool.setuptools]
zip-safe = false
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]